# codex-auth

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/skills/codex-auth-guide/: SKILL.md
.agents/skills/f12-token-extraction/: SKILL.md
.codex/: auth.json.example  usage.json.example
.github/workflows/: ci.yml  release.yml
profiles/openai-phantom-session/: README.md
scratch/: parse_caps.py  test_api_doc.txt  test_api_pdf.py  test_doc.txt  test_error.py  test_file_upload.py
src/codex_auth/: __init__.py  auth_writer.py  chat.py  cli.py  interceptor.py  usage.py  usage.py.tmp
src/codex_auth/api/: __init__.py  routes_ollama.py  routes_openai.py  routes_ui.py
src/codex_auth/core/: browser.py
src/codex_auth/providers/: base.py
src/codex_auth/providers/openai/: auth.py  provider.py
src/codex_auth/web/templates/: dashboard.html
tests/: __init__.py  test_auth_writer.py  test_interceptor.py
tools/: auto_coder.py  dump_endpoints.py
