[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-auth"
version = "0.1.0"
description = "A Stealth Playwright proxy providing an OpenAI-compatible API to ChatGPT"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Codex Auth", email = "codex-auth@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
codex-auth = "codex_auth.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_auth"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
